# sst-opensoundcontrol-clap

./: CMakeLists.txt  LICENSE  README.MD  osc_adapter.h  udp.hh
include/sst/osc-adapter/: osc_adapter.h  oscpkt.hh  udp.hh
